# alertify

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
app/: config.py  database.py  main.py  routers.py  schemas.py  send_email.py
